--- a/pages/search.html
+++ b/pages/search.html
@@ -4,7 +4,7 @@ title:      Search
 permalink:  'search/'
 ---
 
-<link rel="stylesheet" href="{{ site.baseurl }}css/search.css">
+<link rel="stylesheet" href="{{ site.github.url }}css/search.css">
 
 <header>
     <h1 class="page-title"><label for="search-bar">{{ page.title }}</label></h1>
